@@ -429,3 +429,21 @@ G_MODULE_EXPORT gboolean line_add_arg(struct line *l, const char *arg)
 
 	return TRUE;
 }
+
+G_MODULE_EXPORT struct line *line_prefix_time(struct line *l, time_t t)
+{
+	struct line *nl = linedup(l);
+	char stime[512];
+	char *tmp;
+
+	strftime(stime, sizeof(stime), "%H:%M:%S", localtime(&t));
+	tmp = g_strdup_printf("[%s] %s", stime, nl->args[2]);
+	if (tmp == NULL)
+		return NULL;
+	g_free(nl->args[2]);
+	nl->args[2] = tmp;
+
+	return nl;
+}
+
+
