@@ -270,6 +270,10 @@ static gboolean process_from_server(struct network *n, struct line *l)
 					ctcp_process_network_reply(n, l);
 				}
 			} else if (run_server_filter(n, l, FROM_SERVER)) {
+				if (!strcmp(l->args[0], "PRIVMSG") && 
+					n->global->config->report_time == REPORT_TIME_ALWAYS)
+					l = line_prefix_time(l, time(NULL));
+
 				clients_send(n->clients, l, NULL);
 			}
 		} 
@@ -520,6 +524,9 @@ gboolean network_send_line(struct network *s, struct client *c,
 	   (!g_strcasecmp(l.args[0], "PRIVMSG") || 
 		!g_strcasecmp(l.args[0], "NOTICE"))) {
 		g_assert(l.origin);
+		if (s->global->config->report_time == REPORT_TIME_ALWAYS)
+			line_prefix_time(&l, time(NULL));
+
 		clients_send(s->clients, &l, c);
 	}
 
