@@ -12,6 +12,8 @@ Ctrlproxy 3.0.5 UNRELEASED
 
 	* Warn about unknown configuration file settings. (#15)
 
+	* Support prefixing all lines with the time ("report-time = always"). (#169)
+
   BUG FIXES
 
     * Handle 275 response correctly.
